[gd_scene load_steps=8 format=3 uid="uid://d3taqhnb63qg5"]

[ext_resource type="Script" path="res://scripts/game/game.gd" id="1_2bei8"]
[ext_resource type="PackedScene" uid="uid://3mhjpshm23qr" path="res://scenes/chat/message_container.tscn" id="2_0vmbl"]
[ext_resource type="Script" path="res://scripts/game/HostOptions.gd" id="3_muoxo"]

[sub_resource type="FontFile" id="FontFile_3vux2"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/2/0/ascent = 0.0
cache/0/2/0/descent = 0.0
cache/0/2/0/underline_position = 0.0
cache/0/2/0/underline_thickness = 0.0
cache/0/2/0/scale = 1.0
cache/0/2/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/3/0/ascent = 0.0
cache/0/3/0/descent = 0.0
cache/0/3/0/underline_position = 0.0
cache/0/3/0/underline_thickness = 0.0
cache/0/3/0/scale = 1.0
cache/0/3/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/4/0/ascent = 0.0
cache/0/4/0/descent = 0.0
cache/0/4/0/underline_position = 0.0
cache/0/4/0/underline_thickness = 0.0
cache/0/4/0/scale = 1.0
cache/0/4/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/5/0/ascent = 0.0
cache/0/5/0/descent = 0.0
cache/0/5/0/underline_position = 0.0
cache/0/5/0/underline_thickness = 0.0
cache/0/5/0/scale = 1.0
cache/0/5/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/6/0/ascent = 0.0
cache/0/6/0/descent = 0.0
cache/0/6/0/underline_position = 0.0
cache/0/6/0/underline_thickness = 0.0
cache/0/6/0/scale = 1.0
cache/0/6/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/7/0/ascent = 0.0
cache/0/7/0/descent = 0.0
cache/0/7/0/underline_position = 0.0
cache/0/7/0/underline_thickness = 0.0
cache/0/7/0/scale = 1.0
cache/0/7/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/8/0/ascent = 0.0
cache/0/8/0/descent = 0.0
cache/0/8/0/underline_position = 0.0
cache/0/8/0/underline_thickness = 0.0
cache/0/8/0/scale = 1.0
cache/0/8/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/9/0/ascent = 0.0
cache/0/9/0/descent = 0.0
cache/0/9/0/underline_position = 0.0
cache/0/9/0/underline_thickness = 0.0
cache/0/9/0/scale = 1.0
cache/0/9/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/10/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/11/0/ascent = 0.0
cache/0/11/0/descent = 0.0
cache/0/11/0/underline_position = 0.0
cache/0/11/0/underline_thickness = 0.0
cache/0/11/0/scale = 1.0
cache/0/11/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/12/0/ascent = 0.0
cache/0/12/0/descent = 0.0
cache/0/12/0/underline_position = 0.0
cache/0/12/0/underline_thickness = 0.0
cache/0/12/0/scale = 1.0
cache/0/12/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/13/0/ascent = 0.0
cache/0/13/0/descent = 0.0
cache/0/13/0/underline_position = 0.0
cache/0/13/0/underline_thickness = 0.0
cache/0/13/0/scale = 1.0
cache/0/13/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/14/0/ascent = 0.0
cache/0/14/0/descent = 0.0
cache/0/14/0/underline_position = 0.0
cache/0/14/0/underline_thickness = 0.0
cache/0/14/0/scale = 1.0
cache/0/14/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/15/0/ascent = 0.0
cache/0/15/0/descent = 0.0
cache/0/15/0/underline_position = 0.0
cache/0/15/0/underline_thickness = 0.0
cache/0/15/0/scale = 1.0
cache/0/15/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/90/0/ascent = 0.0
cache/0/90/0/descent = 0.0
cache/0/90/0/underline_position = 0.0
cache/0/90/0/underline_thickness = 0.0
cache/0/90/0/scale = 1.0
cache/0/90/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/90/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/90/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/90/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/90/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/90/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/90/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/90/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/90/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/90/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/90/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/90/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/90/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/90/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/90/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/90/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/90/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/90/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/90/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/20/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/50/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/50/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fl0kh"]
bg_color = Color(0.168627, 0.168627, 0.223529, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_drfqi"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u20lr"]
bg_color = Color(0.168627, 0.168627, 0.223529, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_2bei8")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1925.0
offset_bottom = 1087.0
color = Color(0.101961, 0.101961, 0.141176, 1)

[node name="Text" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 8.0
offset_right = 1916.0
offset_bottom = 65.0
theme_override_fonts/font = SubResource("FontFile_3vux2")
theme_override_font_sizes/font_size = 50
text = "Multiplayer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 1139.0
offset_top = 1006.0
offset_right = 1643.0
offset_bottom = 1057.0
theme_override_styles/normal = SubResource("StyleBoxFlat_fl0kh")
theme_override_styles/focus = SubResource("StyleBoxFlat_fl0kh")
theme_override_styles/read_only = SubResource("StyleBoxFlat_fl0kh")
placeholder_text = "message text"

[node name="SendMessageButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1667.0
offset_top = 1007.0
offset_right = 1858.0
offset_bottom = 1057.0
theme_override_styles/normal = SubResource("StyleBoxFlat_drfqi")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Send
"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="MessageBackground" type="Panel" parent="."]
layout_mode = 0
offset_left = 1127.0
offset_top = 62.0
offset_right = 1859.0
offset_bottom = 989.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_u20lr")

[node name="MessageContainer" parent="." instance=ExtResource("2_0vmbl")]
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
offset_left = 1133.0
offset_top = 73.0
offset_right = -69.0
offset_bottom = -113.0

[node name="HTTPBackgroundRequest" type="HTTPRequest" parent="."]

[node name="BackgroundImage" type="Sprite2D" parent="."]
position = Vector2(82, 68)
scale = Vector2(0.9, 0.836)
centered = false

[node name="HostOptions" type="Node2D" parent="."]
position = Vector2(364, 1018)
script = ExtResource("3_muoxo")

[node name="HBoxContainer" type="HBoxContainer" parent="HostOptions"]
offset_left = -338.0
offset_top = -8.0
offset_right = 749.0
offset_bottom = 40.0

[node name="GenerateBackgroundButton" type="Button" parent="HostOptions/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_drfqi")
text = "Generate background
"

[node name="GenerateAIResponseButton" type="Button" parent="HostOptions/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_drfqi")
text = "Generate AI Response
"

[node name="CheckBox" type="CheckBox" parent="HostOptions/HBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Enable AI Auto Response"

[connection signal="pressed" from="SendMessageButton" to="." method="_on_send_message_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="remove_message" from="MessageContainer" to="." method="_on_message_container_remove_message"]
[connection signal="request_completed" from="HTTPBackgroundRequest" to="." method="_on_http_background_request_request_completed"]
[connection signal="pressed" from="HostOptions/HBoxContainer/GenerateBackgroundButton" to="." method="_on_generate_background_button_pressed"]
[connection signal="pressed" from="HostOptions/HBoxContainer/GenerateAIResponseButton" to="." method="_on_generate_ai_response_button_pressed"]
[connection signal="toggled" from="HostOptions/HBoxContainer/CheckBox" to="HostOptions" method="_on_check_box_toggled"]
